fix: ip-billing page table alignment

--- a/src/assets/scss/components/_utils.scss
+++ b/src/assets/scss/components/_utils.scss
@@ -41,122 +41,128 @@
 
 // Colors scss
 .text-primary {
-    color: $primary-600;
+  color: $primary-600;
 }
 // Padding
 .pb-1 {
-    padding-bottom: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .pb-2 {
-    padding-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .pb-3 {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 .pb-4 {
-    padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .pb-5 {
-    padding-bottom: 3rem;
+  padding-bottom: 3rem;
 }
 // Margin
 .mb-1 {
-    margin-bottom: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 .mb-2 {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .mb-3 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .mb-4 {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .mb-5 {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 .mat-typography {
-    .pill {
-        width: 16px;
-        height: 16px;
-        min-width: 16px;
-        min-height: 16px;
-        border-radius: 100%;
-    }
-    // Basic list
-    ul.list-basic {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        li {
-            .list-item {
-                display: flex;
-                justify-content: space-between;
-                gap: 4px;
-                flex-wrap: wrap;
-                .list-item-key {
-                    font-weight: 600;
-                }
-                &-start {
-                    justify-content: flex-start;
-                }
-            }
-        }
-    }
-    .net-amt-section {
-        .net-amt {
-            display: flex;
-            // justify-content: flex-start;
-            justify-content: space-around;
-            // align-items: center;
-            gap: 24px;
-            .net-amt-box {
-                .net-amt-label {
-                    font-weight: 600;
-                }
-                .net-amt-value {
-                    background-color: aquamarine;
-                }
-            }
-        }
-    }
-    .patient-info-row {
+  .pill {
+    width: 16px;
+    height: 16px;
+    min-width: 16px;
+    min-height: 16px;
+    border-radius: 100%;
+  }
+  // Basic list
+  ul.list-basic {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    li {
+      .list-item {
         display: flex;
-        align-items: center;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 6px;
-        @include media-breakpoint("sm") {
-            grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+        gap: 4px;
+        flex-wrap: wrap;
+        .list-item-key {
+          font-weight: 600;
         }
-        @include media-breakpoint("xs") {
-            grid-template-columns: repeat(1, 1fr);
+        &-start {
+          justify-content: flex-start;
         }
-        .patient-col {
-            display: flex;
-            align-items: center;
-            gap: 3px;
-            @include font-size(14px);
-            .patient-col-key {
-                font-weight: 700;
-            }
-            .patient-col-value {
-            }
-        }
+      }
     }
+  }
+  .net-amt-section {
+    .net-amt {
+      display: flex;
+      // justify-content: flex-start;
+      justify-content: space-around;
+      // align-items: center;
+      gap: 24px;
+      .net-amt-box {
+        .net-amt-label {
+          font-weight: 600;
+        }
+        .net-amt-value {
+          background-color: aquamarine;
+        }
+      }
+    }
+  }
+  .patient-info-row {
+    display: flex;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 6px;
+    @include media-breakpoint('sm') {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include media-breakpoint('xs') {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .patient-col {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+      @include font-size(14px);
+      .patient-col-key {
+        font-weight: 700;
+      }
+      .patient-col-value {
+      }
+    }
+  }
 }
 .fw-400 {
-    font-weight: 400;
+  font-weight: 400;
 }
 .fw-500 {
-    font-weight: 500;
+  font-weight: 500;
 }
 .fw-600 {
-    font-weight: 600;
+  font-weight: 600;
 }
 .fw-700 {
-    font-weight: 700;
+  font-weight: 700;
 }
 .fw-800 {
-    font-weight: 800;
+  font-weight: 800;
+}
+.overflow-auto {
+  overflow: auto !important;
+}
+.overflow-hidden {
+  overflow: hidden !important;
 }
